# C-Sudoku-Simulated-Annealing

./: CMakeLists.txt  README.md  main.c  main.h
board/: countEmptyCells.c  countEmptyCells.h  empty-cell.h
board-sizes/: board-sizes.h  main.c  main.h
board/create/: main.c  main.h
board/fill/: main.c  main.h
board/generate/: generateAllBoardPositions.c  generateAllBoardPositions.h  generateEmptyCellPositions.c  generateEmptyCellPositions.h  main.c  main.h
display/: main.c  main.h
helpers/: delete-random-numbers.c  delete-random-numbers.h  fill-array.c  fill-array.h  generate-array.c  generate-array.h  get-random-number.c  get-random-number.h
solver/: main.c  main.h
validate/: main.c  main.h
